--- a/projects/staging/kustomization.yaml
+++ b/projects/staging/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../base/facebooc
-patchesStrategicMerge:
-  - facebooc-deploy-kustomization.yaml
- 
+- ../base/facebooc
+- ../base/instavote
+patches:
+- path: facebooc-deploy-kustomization.yaml
+- path: instavote-deploy-kustomization.yaml
